# mallet

./: .gitignore  .gitmodules  MODAL_DEPLOYMENT.md  README-config.md  README.md  bridge_explore.ipynb  eval_simpler.py  mock_tester.py  modal_server.py  mse_ecot.ipynb  primitive_moves_tester.py  pyproject.toml  requirements.txt  setup.py  simpler_on_modal.py  test_modal_tunnel.py  test_server_via_client.py  test_utils.py  tester.py  vla_modal_server.py  vlm_modal_server.py  vlm_tester.py
examples/: example_client.py
modal_servers/: README.md
modal_servers/vla/: __init__.py  vla_modal_server.py  vla_modal_server_with_tunnel.py
modal_servers/vlm/: __init__.py  vlm_modal_server.py  vlm_modal_server_with_tunnel.py
scripts/: keep_alive.py  primitive_moves_tester.py  test_server.py  test_server_via_client.py  test_utils.py  test_vlm.py  vlm_tester.py
src/mallet/: __init__.py
src/mallet/config/: README.md  __init__.py  rate_limits.yaml
src/mallet/models/: __init__.py  eval.py  rate_limit.py  (+3 more)
vlm_autoeval_robot_benchmark/: README.md  __init__.py  __main__.py  server.py
vlm_autoeval_robot_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vlm_autoeval_robot_benchmark/config/: README-config.md  __init__.py  rate_limits.yaml
vlm_autoeval_robot_benchmark/models/: __init__.py  eval.py  rate_limit.py  rate_limit_cli.py  translation.py  vlm.py
vlm_autoeval_robot_benchmark/servers/: ecot_server.py  openvla_server.py  server.py
vlm_autoeval_robot_benchmark/utils/: __init__.py  action_bounds.json  image_utils.py  rate_limit.py  robot_utils.py
(+11 files in other folders)
